- Fixed #1333337 : Grp memberships lost when usr w. no Group perm edits usr act (jegelstaff/dugris)
- Fixed #1821846 : mistake on RpcDateTimeHandle (Garrath/dugris)
- improved : include multiple language files (DuGris)
- Fixed : themes, Cascading - add themes screenshot (kris_fr/DuGris)
- Fixed bug #1415777 : xml feed is not working when debug mode is activated (DuGris)
- Fixed : Do not display the comment form if the option module "Allow anonymous post in comments?" is disabled (dugris)
- Fixed bug #1808484 : Check modules permissions before displaying "Recent comments blocks" (herve/dugris)
- Fixed #1782185 : Adding new parameters (width, height, max file size) for uploading ranks (dugris)
- Default theme corrected : xhtml transitional 1.0, css 1/2/3 (kris_fr)
- improved : xhtml/css compliance /banners.php (kris_fr)
- new favicon.ico (http://www.xoops.org/modules/news/article.php?storyid=2749 - http://www.xoops.org/uploads/OfficialLogoKit.zip)
- improved : xhtml/css compliance (kris_fr)
- Fixed bug #1779352 : Hardcoded language, Secure and improve code, Removal style/css (young-pee/dugris)
- Fixed bug #1774929 : cannot herit methods from kernel's class (Garrath/dugris)
- Fixed : Corrected a line hardcoded (young-pee)
- Fixed : Making sure params used in queries are properly sanitized with intval() when they are integer (herve/malanciault)
- Fixed : In XoopsUser::getUnameFromId, if usereal, then making sure the real name is not just an empty space (herve/malanciault)
- Fixed : rev 1043 for direction acces to admin.php (dugris)
- Fixed : rev 1048 XoopsSecurity, personalize the variable of session and the variable of form (dugris)
- Improved: XoopsSecurity, personalize the variable of session and the variable of form (dugris)
- Fixed bug #1784816 : XoopsTree::getNicePathFromId Add separator only if necessary (dugris)
- Fixed : Check if $_SERVER[$key] AND $_ENV[$key] exists before turning over the value (xoops_getenv) (dugris)
- Change XOOPS_VERSION number